# sneak-peek

./: .gitignore  Anchor.toml  README.md  package.json
programs/staking/: Cargo.toml  README.md
programs/staking/src/: errors.rs  events.rs  lib.rs
programs/treasury/: Cargo.toml  README.md
programs/treasury/src/: errors.rs  events.rs  lib.rs
tests/: staking.js
tests/utils/: index.js
